fix vertical-align

--- a/public/be_styles.css
+++ b/public/be_styles.css
@@ -95,6 +95,7 @@
             th, td {
                 all: unset;
                 display: inline-block;
+                vertical-align: text-top;
             }
         }
     }
